hello world started

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,13 @@
 [frontend]
-172.31.19.208
+172.31.24.12
+172.31.30.139
+
+
+[backend]
+172.31.24.12
+172.31.30.139
+
+
+[database]
+172.31.24.12
+172.31.30.139
