--- a/03-nginx.yaml
+++ b/03-nginx.yaml
@@ -1,5 +1,6 @@
 - name: nginx install and run
   hosts: frontend
+  become: yes # sudo access
   tasks:
   - name: install nginx server
     ansible.builtin.package:
@@ -12,4 +13,3 @@
       name: nginx
       state: started
       enabled: yes
-      
